--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react": "^16.3.0-alpha.1",
     "react-dev-utils": "^5.0.0",
     "react-dom": "^16.3.0-alpha.1",
+    "react-native-event-source": "^1.0.1",
     "react-router-dom": "^4.2.2",
     "react-transition-group": "^2.2.1",
     "sass-loader": "^6.0.7",
