--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "serve": "^6.5.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
+    "sweet-dropdown": "^1.0.0",
+    "sweetalert": "^2.1.0",
     "url-loader": "0.6.2",
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
